# wasm-demo

./: .envrc  .gitignore  cabal.project  flake.nix  ormolu-live.cabal
.direnv/: flake-profile-af1e39d359c878ea7c2aa0a6f2f2daafb63ebde3  flake-profile-af1e39d359c878ea7c2aa0a6f2f2daafb63ebde3.rc
.direnv/flake-inputs/: 00iz7fq6gy1aqms30cx9pf767g4v4gzm-source  06hrp1ayvbz1xxy2sq813csja9fpa0gz-source  2nc133jyamm2linarilzdfc114akbzx5-source  35sfl01w60fsbkxk1j057ipjga2agx2b-source  3ip616gljg9kzrkzf29dk5gvszyzb9my-source  5jfr175cswffk0jvvin9lgniyr9s6qlq-source  5ych1kv77yh3fgailnbjrv22qjhvif28-source  6f37g8ssf6jjgpznzlc6s90wcrcbc00f-source  78m2fms8djxld5p5dw311isf3rgdyqa3-source  adcajk19i9r7h1kp7swq5c653r0n1yms-source  b0v49cl4ry317fzlkg8d5i0whp12j5ml-source  c6n3sgs6i1j697xz3pws40j7sw83qvn0-source  cwbc4ifllx3wb8gaa2wilasr3gsxlwv7-source  dfhdc9dhwm7w9x0pfclla8n67jyvfpaz-source  dii84pj554q2w39idh42r9j1bvcxgqla-source  dmcric47gi0f1213padyr2dbz57mffld-source  fgrjw2pln3c48rxafvhn4pkkr0pkh7dv-source  hg6aql6bh3714z2mwknsw6p56kzrhnhx-source  hhjv8awx8frc4ynzyylbjbyr7vzlzn90-source  hx8gpxhk4xyv851l71qgija05vx9v59g-source  ld8vl1pncmf6rry4nh5qm03s5zliincw-source  mf0h4kggd7vhddn3fxlhx1ih7ia675cn-source  nlawm43dvjgaz5q9bj45vwk6a3rfddbn-source  p7iz0r8gs6ppkhj83zjmwyd21k8b7v3y-source  qc0cdv66gcsq5l529qxsy6fdxyhj4zqr-source  rs4hf70hxqrn0pkpi6329wb0wb4mib5r-source  xpp1ksmlgkx3ixbz6nq4w1qq309v7q3x-source
app/: Main.hs
cbits/: init.c
factors/: .gitignore  factors.cabal
factors/app/: Main.hs
factors/src/ZK/: Factors.hs
factors/src/ZK/Factors/: Circuit.hs  Witness.hs
factors/test/: Main.hs
galois-field/: galois-field.cabal
galois-field/src/Data/Field/Galois/: Binary.hs  Extension.hs
snarkl/: cabal.project  snarkl.cabal
snarkl/examples/Snarkl/Example/: Basic.hs  Games.hs  Keccak.hs  Matrix.hs
snarkl/src/Snarkl/: Interp.hs  Toplevel.hs
snarkl/src/Snarkl/Backend/R1CS/: R1CS.hs
snarkl/src/Snarkl/CLI/: GenWitness.hs  RunAll.hs
snarkl/src/Snarkl/Constraint/: Simplify.hs
snarkl/src/Snarkl/Language/: Matrix.hs  Prelude.hs  Vector.hs
snarkl/tests/Test/Snarkl/: UnitSpec.hs
snarkl/tests/Test/Snarkl/Unit/: Programs.hs
snarkl/tutorial/: tutorial.cabal
snarkl/tutorial/sudoku/: Sudoku.md
snarkl/tutorial/sudoku/solver/: Main.hs
wasm/: .default.nix.swp  .gitignore  build-wasm.sh  cabal.project  default.nix  index.html  ormolu-live.cabal  package-lock.json  package.json  packages.dhall  spago.dhall  webpack.config.js
wasm/app/: Main.hs
wasm/src/: App.purs  CircuitInput.purs  Field.purs  Main.purs  Solver.js  Solver.purs  index.js  ormolu.wasm  worker.js
wasm/src/App/: App.purs  CircuitInput.purs  Solver.js  Solver.purs
wasm/src/Snarkl/: Types.purs
wasm/src/UI/Formless/: Field.purs
wasm/test/: Main.purs
wasm/www/: index.js
