cabal-version:      3.0
name:               factors
version:            0.1.0.0
author:             martyall
maintainer:         martyall@protonmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ZK.Factors
    other-modules:    ZK.Factors.Circuit,
                      ZK.Factors.Witness

    build-depends:   
        base,
        containers,
        snarkl,
        galois-field
    hs-source-dirs:   src
    default-language: Haskell2010

executable factors
    import:           warnings
    main-is:          Main.hs

    build-depends:
        base,
        factors,
        snarkl

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite factors-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        factors,
        hspec,
        QuickCheck,
        snarkl
